2007-05-24  David Hyatt  <hyatt@apple.com>

        Improve <form> error reporting to catch <form>s inside table parts.
        Tweak the wording of some of the error messages to be a bit better.

        Reviewed by olliej

        * html/HTMLParser.cpp:
        (WebCore::HTMLParser::insertNode):
        (WebCore::HTMLParser::processCloseTag):
        (WebCore::HTMLParser::popBlock):
        * html/HTMLParserErrorCodes.cpp:
        (WebCore::htmlParserErrorMessageTemplate):
        * html/HTMLParserErrorCodes.h:

2007-05-24  Rob Buis  <buis@kde.org>

        Reviewed by Hyatt.

        http://bugs.webkit.org/show_bug.cgi?id=4104
        first-letter not updating style with hover
        http://bugs.webkit.org/show_bug.cgi?id=13169
        css-formatted first letter won't hide dynamically

        Update first letter when RenderBlock::setStyle is called. 

        * css/cssstyleselector.cpp:
        (WebCore::CSSStyleSelector::checkOneSelector):
        * dom/Document.cpp:
        (WebCore::Document::Document):
        (WebCore::Document::createElement):
        * dom/Document.h:
        (WebCore::Document::usesFirstLetterRules):
        (WebCore::Document::setUsesFirstLetterRules):
        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::setStyle):
        (WebCore::RenderBlock::updateFirstLetter):

2007-05-24  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13800
          REGRESSION: Moving a slider moves another unrelated slider

        Test: fast/forms/slider-thumb-shared-style.html

        RenderSlider mutates the thumb's style, therefore it must not be shared
        with another slider's thumb, a situation that could occur if the sliders
        themselves shared style.

        * rendering/RenderSlider.cpp:
        (WebCore::RenderSlider::createThumbStyle): Always use a private copy for
        the thumb style.

2007-05-24  Adele Peterson  <adele@apple.com>
