@@ -33,6 +33,7 @@
 #include "Frame.h"
 #include "FrameLoader.h"
 #include "FrameView.h"
+#include "Logging.h"
 #include "Page.h"
 #include "SystemTime.h"
 #if ENABLE(SVG)
@@ -50,6 +51,21 @@ using namespace KJS;
 
 namespace WebCore {
 
+#ifndef NDEBUG
+WTFLogChannel LogWebCoreCachedPageLeaks =  { 0x00000000, "", WTFLogChannelOn };
+
+struct CachedPageCounter { 
+    static int count; 
+    ~CachedPageCounter() 
+    { 
+        if (count)
+            LOG(WebCoreCachedPageLeaks, "LEAK: %d CachedPage\n", count);
+    }
+};
+int CachedPageCounter::count = 0;
+static CachedPageCounter cachedPageCounter;
+#endif
+
 PassRefPtr<CachedPage> CachedPage::create(Page* page)
 {
     return new CachedPage(page);
@@ -65,6 +81,10 @@ CachedPage::CachedPage(Page* page)
     , m_locationProperties(new SavedProperties)
     , m_interpreterBuiltins(new SavedBuiltins)
 {
+#ifndef NDEBUG
+    ++CachedPageCounter::count;
+#endif
+    
     Frame* mainFrame = page->mainFrame();
     KJSProxy* proxy = mainFrame->scriptProxy();
     Window* window = Window::retrieveWindow(mainFrame);
@@ -90,6 +110,10 @@ CachedPage::CachedPage(Page* page)
 
 CachedPage::~CachedPage()
 {
+#ifndef NDEBUG
+    --CachedPageCounter::count;
+#endif
+
     close();
 }
 
